# dexta-intelligence

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEXTA_OSS_TECHNICAL_SPEC.md  Dockerfile  EXTENDING.md  HANDOFF.md  ISSUES.md  MEDICAL_DISCLAIMER.md  PRIVACY.md  README.md  SECURITY.md  TECHNICAL_REPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector.md  feature_request.md
.github/workflows/: ci.yml
docs/: INTELLIGENCE-FLOW-PLAN.md  MEMORY-V2-AUDIT.md
eval/: __init__.py  agent_eval.py  report.py  runner.py  scenarios.py
eval/metrics/: __init__.py  e1_faithfulness.py  e2_power.py  e3_accuracy.py  e4_null_fdr.py  e5_perturbation.py  e6_attribution.py  e6_faithfulness.py  e6_safety.py  e7_reasoning.py  e_consensus.py
guide/: DEMO.md  PRODUCT-OVERVIEW.md  RELEASE.md  UI-FIX-PLAN.md  UI-ROADMAP.md
src/dexta_intelligence/: __init__.py  cli.py  coldstart.py  config.py  demo.py  models.py  notifications.py
src/dexta_intelligence/agents/: __init__.py  _calendar.py  _json.py  advisory.py  base.py  brief.py  chat.py  context_acquisition.py  coordinator.py  discovery.py  discovery_tools.py  insulin.py  investigation.py  investigator.py  observation.py  orchestrator.py  pattern.py  reason.py  reconciliation.py  router.py  seeker.py  skeptic.py  time_tools.py  trace.py
src/dexta_intelligence/analytics/: error_grid.py  oref.py  (+1 more)
tests/: test_advisory.py  test_analytics_error_grid.py  test_autosync.py  test_brief_agent.py  test_carelink_connector.py  test_charts.py  test_chat_agent.py  test_chat_turns.py  test_cli.py  test_cli_roles.py  test_context_acquisition.py  test_context_page.py  test_coordinator.py  test_csv_upload.py  test_daemon.py  test_deep_analysis.py  test_demo.py  test_demo_seed.py  test_dexcom_api_connector.py  test_dexcom_connector.py  test_discovery_agent.py  test_e6_attribution.py  test_e6_faithfulness.py  test_e6_safety.py  test_e7_reasoning.py  test_embeddings.py  test_eval_consensus.py  test_eval_e1.py  test_eval_e2.py  test_eval_e3.py  test_eval_e4.py  test_eval_e5.py  test_eval_e6.py  test_evals_page.py  test_evidence.py  test_explain_spike.py  test_extensibility.py  test_faithfulness.py  test_freshness.py  test_glucose_stats.py  (+71 more)
tests/fixtures/: clarity_bom_sample.csv  clarity_sample.csv  libreview_mmol_sample.csv  libreview_sample.csv  nightscout_devicestatus.json  nightscout_entries.json  nightscout_treatments.json  oura_daily_activity.json  oura_daily_readiness.json  oura_daily_sleep.json  oura_sleep.json  oura_workout.json  pubmed_esearch.json  pubmed_esearch_empty.json  pubmed_esummary.json  tidepool_sample.json  whoop_recovery.json  whoop_sleep.json  whoop_workout.json
tests/golden/: __init__.py  generator.py
(+144 files in other folders)
