[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexta-intelligence"
version = "0.1.0"
description = "Continuous health intelligence for Type 1 diabetes: an agentic harness with deterministic analytics, statistical rigor, and a numeric-faithfulness guard. Bring your own model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ishaan Sharma" }]
keywords = [
  "diabetes",
  "cgm",
  "nightscout",
  "agents",
  "health-ai",
  "llm",
  "faithfulness",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
llm = ["langchain>=0.3", "langchain-core>=0.3"]
nightscout = ["httpx>=0.27"]
dexcom = ["pydexcom>=0.4"]
libre = ["pylibrelinkup>=0.10"]
whoop = ["httpx>=0.27"]
postgres = ["psycopg[binary]>=3.2"]
mcp = ["fastmcp>=2.0"]
all = ["dexta-intelligence[llm,nightscout,dexcom,libre,whoop,postgres,mcp]"]

[project.scripts]
dexta = "dexta_intelligence.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "fastmcp>=2.0",
]

[project.urls]
Repository = "https://github.com/ishaansharma/dexta-intelligence"

[tool.hatch.build.targets.wheel]
packages = ["src/dexta_intelligence"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # bugbear
  "SIM",  # simplify
  "RUF",  # ruff-specific
  "PL",   # pylint subset
  "TCH",  # type-checking imports
]
ignore = [
  "PLR0913", # too many arguments — protocols and stats functions legitimately take several
  "PLR2004", # magic values — clinical thresholds are documented inline, not hidden in constants
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["dexta_intelligence"]
warn_unreachable = true

[[tool.mypy.overrides]]
# Optional [llm] extra — lazily imported in llm/factory.py, not installed in
# the base dev environment.
module = ["langchain.*", "langchain_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "calibration: statistical calibration tests (slower; run in CI, skippable locally)",
]
